Videon toisto toimii käyttäen fragmentteja

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,23 +5,27 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
+    // Videon kuvauksesta vastaava fragmentti
     <fragment android:name="helsinki.cs.mobiilitiedekerho.mobiilitiedekerho.CameraFragment"
         android:id="@+id/camera_fragment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
         tools:layout="@layout/camera_fragment" />
 
+    // Vastausvideoiden toistosta vastaava fragmentti
     <fragment android:name="helsinki.cs.mobiilitiedekerho.mobiilitiedekerho.TaskVideoFragment"
         android:id="@+id/task_video_fragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:layout="@layout/task_video_fragment"/>
 
+    // Tehtävävideon toistosta vastaava fragmentti
     <fragment android:name="helsinki.cs.mobiilitiedekerho.mobiilitiedekerho.AnswerVideoFragment"
         android:id="@+id/answer_video_fragment"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:layout="@layout/answer_video_fragment"/>
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        tools:layout="@layout/answer_video_fragment" />
 
 
 
