--- a/app/src/main/res/layout/answer_video_fragment.xml
+++ b/app/src/main/res/layout/answer_video_fragment.xml
@@ -9,7 +9,6 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="false"
         android:focusable="false"
-        android:layout_marginRight="80dp"
         android:layout_marginLeft="10dp"
         android:background="#FFFFFF"
         android:layout_alignParentTop="false"
@@ -18,7 +17,8 @@
         android:layout_marginTop="-15dp"
         android:fillViewport="true"
         android:layoutMode="opticalBounds"
-        android:layout_alignParentBottom="true">
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="150dp">
 
 
 
@@ -116,4 +116,17 @@
 
     </LinearLayout>
     </HorizontalScrollView>
+    <VideoView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:focusable="false"
+        android:focusableInTouchMode="false"
+        android:id="@+id/viewTaskVideo"
+        android:clickable="true"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_alignWithParentIfMissing="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="70dp"
+        android:layout_marginTop="10dp" />
 </RelativeLayout>
